--- a/JS-Back-End/Cubicle/03. Cubicle-Workshop-Part-1-Resources/package.json
+++ b/JS-Back-End/Cubicle/03. Cubicle-Workshop-Part-1-Resources/package.json
@@ -6,16 +6,16 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cross-env": "^7.0.3",
     "express": "^4.18.1",
-    "express-handlebars": "^3.1.0",
+    "express-handlebars": "^6.0.6",
+    "fs": "^0.0.1-security",
+    "name": "file:",
+    "nodemon": "^2.0.16",
     "uniqid": "^5.0.3"
   },
-  "devDependencies": {
-    "nodemon": "^1.19.4"
-  },
   "scripts": {
-    "start": "nodemon ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./index.js"
   },
   "keywords": [],
   "author": "",
