--- a/JS-Back-End/Cubicle/03. Cubicle-Workshop-Part-1-Resources/package.json
+++ b/JS-Back-End/Cubicle/03. Cubicle-Workshop-Part-1-Resources/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "fs": "^0.0.1-security",
+    "mongoose": "^6.3.5",
     "name": "file:",
     "nodemon": "^2.0.16",
     "uniqid": "^5.0.3",
