--- a/JS-Back-End/Cubicle/03. Cubicle-Workshop-Part-1-Resources/package.json
+++ b/JS-Back-End/Cubicle/03. Cubicle-Workshop-Part-1-Resources/package.json
@@ -5,11 +5,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
     "name": "file:",
     "nodemon": "^2.0.16",
