--- a/React-JS/nuron/server/package.json
+++ b/React-JS/nuron/server/package.json
@@ -11,10 +11,13 @@
   "author": "Mihail Valkov",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.14"
+    "express-fileupload": "^1.4.0",
+    "mongoose": "^5.13.14",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
